# jot

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.js
.github/workflows/: release-macos.yml  release-windows.yml
.svelte-kit/: ambient.d.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup_service.rs  chatgpt_service.rs  credential_manager.rs  language_service.rs  language_services.rs  lib.rs  logging.rs  main.rs  storage_service.rs  sync_service.rs
src-tauri/src/nextcloud/: client.rs  commands.rs  config.rs  error.rs  mod.rs  types.rs
src/lib/: fa-icons.ts
src/lib/components/: AIActionModal.svelte  BackupSettings.svelte  BackupStatus.svelte  Button.svelte  ChatGPT.svelte  ChatGPTSettings.svelte  ColorDot.svelte  Editor.svelte  EditorContainer.svelte  FormField.svelte  GrammarChecker.svelte  Header.svelte  Help.svelte  LanguageSettings.svelte  LinkModal.svelte  LogLevelSettings.svelte  LogSettings.svelte  LogViewer.svelte  MarkdownEditor.svelte  Modal.svelte  NextcloudSettings.svelte  Preview.svelte  RestoreConfirmation.svelte  Settings.svelte  SimpleEditor.svelte  StatusBar.svelte  StorageSettings.svelte  SyncIndicator.svelte  SyncStatus.svelte  Translator.svelte  UnifiedSettings.svelte
src/lib/stores/: backupStore.ts  chatgptService.ts  cursorPostionStore.ts  history.ts  keyboardShortcuts.ts  languageServices.ts  nextcloudSync.ts  notes.ts  settings.ts  tabStyles.ts  tabs.ts  (+1 more)
src/routes/: +page.svelte
(+8 files in other folders)
